--- a/digweb/digweb/templates/openVeiw/about.html
+++ b/digweb/digweb/templates/openVeiw/about.html
@@ -78,7 +78,7 @@
       <div class="heading_container heading_center">
         <h2>
           <span class="design_dot"></span>
-          About Our Hospital
+          About Our Team
         </h2>
       </div>
       <div class="col-md-7 mx-auto px-0">
