--- a/digweb/digweb/templates/openVeiw/service.html
+++ b/digweb/digweb/templates/openVeiw/service.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -16,7 +17,7 @@
   <title>Thrine</title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
@@ -25,9 +26,9 @@
   <!-- datepicker -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css">
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
 </head>
 
 <body class="sub_page">
@@ -91,7 +92,7 @@
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="images/s1.png" alt="" />
+            <img src="{% static 'images/s1.png' %}" alt="" />
             <a href="#">
               Cardio Vascular Disease
             </a>
@@ -99,7 +100,7 @@
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="images/s2.png" alt="" />
+            <img src="{% static 'images/s2.png' %}" alt="" />
             <a href="#">
               Diabetes
             </a>
@@ -110,7 +111,7 @@
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="images/s3.png" alt="" />
+            <img src="{% static 'images/s3.png' %}" alt="" />
             <a href="#">
               Surgery
             </a>
@@ -118,7 +119,7 @@
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="images/s4.png" alt="" />
+            <img src="{% static 'images/s4.png' %}" alt="" />
             <a href="#">
               First Aid
             </a>
@@ -126,7 +127,7 @@
         </div>
         <div class="col-md-4 mx-auto">
           <div class="box">
-            <img src="images/s5.png" alt="" />
+            <img src="{% static 'images/s5.png' %}" alt="" />
             <a href="#">
               Therapy
             </a>
