changing texts and styles

--- a/digweb/digweb/templates/openVeiw/index.html
+++ b/digweb/digweb/templates/openVeiw/index.html
@@ -16,9 +16,9 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/s4.png" type="image/x-icon">
 
-  <title>Thrine</title>
+  <title>AI Tec</title>
 
-  <!-- bootstrap core css -->
+  <!-- bootstrap core css --> 
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css'%}" />
 
   <!-- fonts style -->
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <h3>
-              Thrine
+              AI Tec 
             </h3>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,13 +84,13 @@
                   <div class="detail-box">
                     <div>
                       <h1>
-                        health care
+                        Diabetes
                       </h1>
                       <p>
-                        Excepturi quam cum ex, expedita inventore adipisci reprehenderit incidunt doloribus delectus quod, placeat nulla culpa nemo, mollitia natus! Beatae illo quas nemo omnis ullam placeat, obcaecati ducimus rem id. Consectetur.
+                        With diabetes, your body doesn’t make enough insulin or can’t use it as well as it should. When there isn’t enough insulin or cells stop responding to insulin, too much blood sugar stays in your bloodstream. Over time, that can cause serious health problems, such as heart disease, vision loss, and kidney disease.
                       </p>
                       <a href="">
-                        Read More
+                        Calculate my risk
                       </a>
                     </div>
                   </div>
@@ -110,13 +110,13 @@
                   <div class="detail-box">
                     <div>
                       <h1>
-                        health care
+                        Stroke
                       </h1>
                       <p>
-                        Excepturi quam cum ex, expedita inventore adipisci reprehenderit incidunt doloribus delectus quod, placeat nulla culpa nemo, mollitia natus! Beatae illo quas nemo omnis ullam placeat, obcaecati ducimus rem id. Consectetur.
+                        A stroke, sometimes called a brain attack, occurs when something blocks blood supply to part of the brain or when a blood vessel in the brain bursts. In either case, parts of the brain become damaged or die. A stroke can cause lasting brain damage, long-term disability, or even death.
                       </p>
                       <a href="">
-                        Read More
+                        Calculate my risk
                       </a>
                     </div>
                   </div>
@@ -136,13 +136,13 @@
                   <div class="detail-box">
                     <div>
                       <h1>
-                        health care
+                        Chronic Kidney Disease
                       </h1>
                       <p>
-                        Excepturi quam cum ex, expedita inventore adipisci reprehenderit incidunt doloribus delectus quod, placeat nulla culpa nemo, mollitia natus! Beatae illo quas nemo omnis ullam placeat, obcaecati ducimus rem id. Consectetur.
+                        Chronic kidney disease includes conditions that damage your kidneys and decrease their ability to keep you healthy by filtering wastes from your blood. If kidney disease worsens, wastes can build to high levels in your blood and make you feel sick.
                       </p>
                       <a href="">
-                        Read More
+                        Calculate my risk
                       </a>
                     </div>
                   </div>
@@ -452,7 +452,7 @@
       <div class="heading_container heading_center">
         <h2>
           <span class="design_dot"></span>
-          About Our Hospital
+          About our team
         </h2>
       </div>
       <div class="col-md-7 mx-auto px-0">
@@ -463,8 +463,7 @@
       <div class="col-md-9 mx-auto px-0">
         <div class="detail-box">
           <p>
-            Esse sed doloribus error ad laborum dolorem nobis? Cum, culpa? Distinctio natus excepturi fugit eveniet quasi animi ab obcaecati laudantium sit, ratione recusandae accusamus, voluptatum iste placeat. Esse, eos cumque.
-            Culpa nesciunt quia qui possimus eveniet dolore a debitis consectetur quod. Eligendi recusandae placeat soluta
+            Our commitment extends to developing AI-powered diagnostics that can assist healthcare professionals in early detection and intervention, contributing to more effective disease management and improved patient outcomes.
           </p>
           <a href="">
             Read More
@@ -782,15 +781,15 @@
   </footer>
   <!-- footer section -->
 
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
+  <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <!-- nice select -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
   <!-- datepicker -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
   <!-- custom js -->
-  <script src="js/custom.js"></script>
+  <script src="{% static 'js/custom.js' %}"></script>
   <!-- Google Map -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
