--- a/digweb/digweb/templates/openVeiw/css/style.css
+++ b/digweb/digweb/templates/openVeiw/css/style.css
@@ -298,7 +298,7 @@ a:focus {
   width: 10px;
   height: 10px;
   background-color: transparent;
-  border: 3px solid #000000;
+  border: 3px solid #f02a2a;
   border-radius: 100%;
   opacity: 1;
 }
