--- a/digweb/digweb/templates/openVeiw/appointment.html
+++ b/digweb/digweb/templates/openVeiw/appointment.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/s4.png" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
 
   <title>Thrine</title>
 
@@ -37,7 +37,7 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="{% url 'main'%}">
             <h3>
               Thrine
             </h3>
@@ -49,16 +49,16 @@
           <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
             <ul class="navbar-nav  ml-auto">
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home </a>
+                <a class="nav-link" href="{% url 'main'%}">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
+                <a class="nav-link" href="{% url 'about_page'%}"> About </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html"> Services </a>
+                <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="appointment.html"> Appointment <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment <span class="sr-only">(current)</span> </a>
               </li>
             </ul>
             <form class="form-inline ">
@@ -157,16 +157,16 @@
             </h5>
             <ul class="navbar-nav  ">
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'main'%}">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
+                <a class="nav-link" href="{% url 'about_page'%}"> About </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html"> Services </a>
+                <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="appointment.html"> Appointment </a>
+                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
               </li>
             </ul>
           </div>
@@ -225,15 +225,15 @@
   </footer>
   <!-- footer section -->
 
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
+  <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <!-- nice select -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
   <!-- datepicker -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
   <!-- custom js -->
-  <script src="js/custom.js"></script>
+  <script src="{% static 'js/custom.js' %}"></script>
   <!-- Google Map -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
