Add page 404, under construction, CKD, storke

--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -47,18 +47,18 @@
           </button>
 
           <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-            <ul class="navbar-nav  ml-auto">
+            <ul class="navbar-nav ml-auto">
               <li class="nav-item ">
                 <a class="nav-link" href="{% url 'main'%}">Home </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'about_page'%}"> About </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'service_page'%}"> Services </a>
-              </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="{% url 'service_page'%}"> Services <span class="sr-only">(current)</span> </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'appointment_page'%}"> Appointment </a>
               </li>
             </ul>
             <form class="form-inline ">
