--- a/digweb/digweb/templates/openVeiw/stroke.html
+++ b/digweb/digweb/templates/openVeiw/stroke.html
@@ -1,6 +1,4 @@
-
 {% load static %}
-
 <!DOCTYPE html>
 <html>
 
@@ -75,76 +73,68 @@
     <!-- end header section -->
   </div>
 
-  <!-- service section -->
+  <!-- book section -->
 
-  <section class="service_section layout_padding">
+  <section class="book_section layout_padding">
     <div class="container">
-      <div class="heading_container heading_center">
-        <h2>
-          <span class="design_dot"></span>
-          Our Services
-        </h2>
-        <p>
-          It is a long established fact that a reader will be distracted
-        </p>
-      </div>
       <div class="row">
-        <div class="col-md-2">
-
+        <div class="col">
+          <form>
+            <h4>
+              <span class="design_dot"></span>
+              Predict Stroke
+            </h4>
+            <div class="form-row ">
+              <div class="form-group col-lg-4">
+                <label for="inputPatientName">Patient Name </label>
+                <input type="text" class="form-control" id="inputPatientName" placeholder="">
+              </div>
+              <div class="form-group col-lg-4">
+                <label for="inputDoctorName">Doctor's Name</label>
+                <select name="" class="form-control wide" id="inputDoctorName">
+                  <option value="Normal distribution ">Doctor Name 1</option>
+                  <option value="Normal distribution ">Doctor Name 2 </option>
+                  <option value="Normal distribution ">Doctor Name 3 </option>
+                </select>
+              </div>
+              <div class="form-group col-lg-4">
+                <label for="inputDepartmentName">Department's Name</label>
+                <select name="" class="form-control wide" id="inputDepartmentName">
+                  <option value="Normal distribution ">Cardiology </option>
+                  <option value="Normal distribution ">Surgery </option>
+                  <option value="Normal distribution ">First Aid </option>
+                </select>
+              </div>
+            </div>
+            <div class="form-row ">
+              <div class="form-group col-lg-4">
+                <label for="inputPhone">Phone Number</label>
+                <input type="text" class="form-control" id="inputPhone" placeholder="">
+              </div>
+              <div class="form-group col-lg-4">
+                <label for="inputSymptoms">Symptoms</label>
+                <input type="text" class="form-control" id="inputSymptoms" placeholder="">
+              </div>
+              <div class="form-group col-lg-4">
+                <label for="inputDate">Choose Date </label>
+                <div class="input-group date" id="inputDate" data-date-format="mm-dd-yyyy">
+                  <input type="text" class="form-control" readonly>
+                  <span class="input-group-addon date_icon">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="btn-box">
+              <button type="submit" class="btn ">Submit Now</button>
+            </div>
+          </form>
         </div>
-        <div class="col-md-4 mx-auto">
-          <div class="box">
-            <img src="{% static 'images/s1.png' %}" alt="" />
-            <a href="{% url 'under_page'%}">
-              Cardio Vascular Disease
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4 mx-auto">
-          <div class="box">
-            <img src="{% static 'images/s2.png' %}" alt="" />
-            <a href="{% url 'diabetes_page'%}">
-              Diabetes
-            </a>
-          </div>
-        </div>
-        <div class="col-md-2">
-
-        </div>
-        <div class="col-md-4 mx-auto">
-          <div class="box">
-            <img src="{% static 'images/s3.png' %}" alt="" />
-            <a href="{% url 'ckd_page'%}">
-              CKD
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4 mx-auto">
-          <div class="box">
-            <img src="{% static 'images/s4.png' %}" alt="" />
-            <a href="{% url 'stroke_page'%}">
-              Stroke
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4 mx-auto">
-          <div class="box">
-            <img src="{% static 'images/s5.png' %}" alt="" />
-            <a href="{% url 'under_page'%}">
-              Therapy
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          View All
-        </a>
       </div>
     </div>
   </section>
 
-  <!-- end service section -->
+  <!-- end book section -->
 
   <!-- map section -->
 
