--- a/digweb/digweb/Static/css/style.scss
+++ b/digweb/digweb/Static/css/style.scss
@@ -725,3 +725,109 @@ a:focus {
 }
 
 /* end footer section*/
+
+// diabetes section
+.diabetes_section {
+  background-image: linear-gradient(to right,
+      rgba($color: $primary1, $alpha: 0.55),
+      rgba($color: $primary1, $alpha: 0.55)),
+    url(../images/diabetes.jpg);
+  background-size: cover;
+  color: $black;
+
+  form {
+    padding: 35px 45px;
+    background-color: rgba($color: $white, $alpha: 0.95);
+    box-shadow: 0 0 15px 10px rgba($color: #000000, $alpha: 0.07);
+
+    h4 {
+      font-weight: 600;
+      position: relative;
+      margin-bottom: 25px;
+      display: flex;
+      align-items: center;
+
+      .design_dot {
+        width: 15px;
+        height: 15px;
+        border-radius: 100%;
+        background-color: #4bc5b8;
+        margin-right: 5px;
+      }
+    }
+
+    label {
+      color: $black;
+    }
+
+    .form-control {
+      width: 100%;
+      background-color: transparent;
+      // border: 1px solid $primary1;
+      border: none;
+      background-color: #deece9;
+      height: 45px;
+      outline: none;
+      box-shadow: none;
+      border-radius: 5px;
+      padding: 0 15px;
+      color: $black;
+
+      &::placeholder {
+        color: $black;
+      }
+    }
+
+    #inputDate {
+      color: $primary1;
+
+      input {
+        color: $black;
+      }
+    }
+
+    button.btn {
+      background-color: $primary2;
+      color: #ffffff;
+      padding: 10px 45px;
+      border-radius: 5px;
+      margin-top: 10px;
+      text-transform: uppercase;
+    }
+  }
+
+  .date_icon {
+    right: 10px;
+    height: 100%;
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $primary1;
+  }
+
+  .nice-select {
+    color: $black !important;
+
+    &:after {
+      content: "\f107";
+      font-family: FontAwesome;
+      border: none;
+      width: auto;
+      height: auto;
+      transform: none;
+      top: 7px;
+      font-size: 20px;
+      font-weight: bold;
+      transition: all 0.3s;
+    }
+
+    &.open:after {
+      content: "\f106";
+    }
+  }
+}
+
+// end diabetes section
