--- a/digweb/digweb/Static/css/responsive.css
+++ b/digweb/digweb/Static/css/responsive.css
@@ -100,6 +100,11 @@
     .book_section form {
         padding: 35px 25px;
     }
+    /**/
+    .diabetes_section form {
+        padding: 35px 25px;
+    }
+    /**/
 
     .client_section .box {
         margin: 15px;
@@ -126,7 +131,11 @@
     .book_section form h4 .design_dot {
         display: none;
     }
-
+/**/
+.diabetes_section form h4 .design_dot {
+    display: none;
+}
+/**/
     .slider_section .detail-box h1 {
         font-size: 2.5rem;
         letter-spacing: 1px;
