--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="{% url 'main'%}">
             <h3>
-              Thrine
+              AI TEC
             </h3>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,7 +75,7 @@
 
   <!-- book section -->
 
-  <section class="book_section layout_padding">
+  <section class="diabetes_section layout_padding">
     <div class="container">
       <div class="row">
         <div class="col">
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div class="btn-box">
-              <button type="submit" class="btn ">Submit Now</button>
+              <button type="submit" class="btn">Calculate Now</button>
             </div>
           </form>
         </div>
