--- a/digweb/digweb/templates/openVeiw/appointment.html
+++ b/digweb/digweb/templates/openVeiw/appointment.html
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="{% url 'main'%}">
             <h3>
-              Thrine
+              AI TEC
             </h3>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
