--- a/digweb/digweb/templates/openVeiw/appointment.html
+++ b/digweb/digweb/templates/openVeiw/appointment.html
@@ -177,9 +177,8 @@
               Thrine Hospital
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration in some form, by
-              injected humou
+              AI TEC one subset of Electrooptics Industry IRAN (SAPA) which works with the purpose of developing artificial intelligence
+
             </p>
           </div>
         </div>
@@ -191,13 +190,13 @@
             </h5>
             <div class="info_contact">
               <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i> Location
+                <i class="fa fa-map-marker" aria-hidden="true"></i> Location : Isfahan, Isfahan Province, Ostad Falaturi st, Pasargad Shopping mall 
               </a>
               <a href="">
-                <i class="fa fa-envelope" aria-hidden="true"></i> demo@gmail.com
+                <i class="fa fa-envelope" aria-hidden="true"></i> A.I.Tec.IRAN@gmail.com
               </a>
               <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i> Call : +01 1234567890
+                <i class="fa fa-phone" aria-hidden="true"></i> Call : +31 34597406
               </a>
             </div>
             <form action="">
@@ -219,7 +218,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">AI TEC Company</a>
       </p>
     </div>
   </footer>
