--- a/digweb/digweb/templates/openVeiw/index.html
+++ b/digweb/digweb/templates/openVeiw/index.html
@@ -89,7 +89,7 @@
                       <p>
                         With diabetes, your body doesn’t make enough insulin or can’t use it as well as it should. When there isn’t enough insulin or cells stop responding to insulin, too much blood sugar stays in your bloodstream. Over time, that can cause serious health problems, such as heart disease, vision loss, and kidney disease.
                       </p>
-                      <a href="">
+                      <a href="{% url 'diabetes_page'%}">
                         Calculate my risk
                       </a>
                     </div>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="{% static 'images/slider-img.png' %}" alt="">
+                    <img src="{% static 'images/diabetes_start.png' %}" alt="">
                   </div>
                 </div>
               </div>
@@ -115,7 +115,7 @@
                       <p>
                         A stroke, sometimes called a brain attack, occurs when something blocks blood supply to part of the brain or when a blood vessel in the brain bursts. In either case, parts of the brain become damaged or die. A stroke can cause lasting brain damage, long-term disability, or even death.
                       </p>
-                      <a href="">
+                      <a href="{% url 'stroke_page'%}">
                         Calculate my risk
                       </a>
                     </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="{% static 'images/slider-img.png' %}" alt="">
+                    <img src="{% static 'images/stroke_start.png' %}" alt="">
                   </div>
                 </div>
               </div>
@@ -141,7 +141,7 @@
                       <p>
                         Chronic kidney disease includes conditions that damage your kidneys and decrease their ability to keep you healthy by filtering wastes from your blood. If kidney disease worsens, wastes can build to high levels in your blood and make you feel sick.
                       </p>
-                      <a href="">
+                      <a href="{% url 'ckd_page'%}">
                         Calculate my risk
                       </a>
                     </div>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="{% static 'images/slider-img.png' %}" alt="">
+                    <img src="{% static 'images/ckd_start.png' %}" alt="">
                   </div>
                 </div>
               </div>
@@ -687,10 +687,10 @@
             </h5>
             <div class="info_contact">
               <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i> Isfahan, Isfahan Province, Ostad Falaturi st, Pasargad Shopping mall 
+                <i class="fa fa-map-marker" aria-hidden="true"></i> Location : Isfahan, Isfahan Province, Ostad Falaturi st, Pasargad Shopping mall 
               </a>
               <a href="">
-                <i class="fa fa-envelope" aria-hidden="true"></i> medical.ai.tech@gmail.com
+                <i class="fa fa-envelope" aria-hidden="true"></i> A.I.Tec.IRAN@gmail.com
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i> Call : +31 34597406
