--- a/digweb/digweb/Static/css/function_style.css
+++ b/digweb/digweb/Static/css/function_style.css
@@ -137,7 +137,7 @@
   }
   
   .diabetes_section form button.btn {
-    background-color: #35806e;
+    background-color: #da5327;
     color: #ffffff;
     padding: 10px 45px;
     border-radius: 5px;
@@ -327,7 +327,7 @@
 }
 
 .stroke_section form button.btn {
-  background-color: #35806e;
+  background-color: #da5327;
   color: #ffffff;
   padding: 10px 45px;
   border-radius: 5px;
@@ -518,7 +518,7 @@
 }
 
 .ckd_section form button.btn {
-  background-color: #35806e;
+  background-color: #da5327;
   color: #ffffff;
   padding: 10px 45px;
   border-radius: 5px;
