--- a/digweb/digweb/templates/openVeiw/service.html
+++ b/digweb/digweb/templates/openVeiw/service.html
@@ -115,7 +115,7 @@
           <div class="box">
             <img src="{% static 'images/s3.png' %}" alt="" />
             <a href="{% url 'ckd_page'%}">
-              CKD
+              Chronic Kidney Disease
             </a>
           </div>
         </div>
