--- a/digweb/digweb/templates/openVeiw/stroke.html
+++ b/digweb/digweb/templates/openVeiw/stroke.html
@@ -212,6 +212,61 @@
 </section>
 <!-- end discription section -->
 
+<!-- service section -->
+
+<section class="service_section layout_padding">
+  <div class="container">
+    <div class="heading_container heading_center">
+      <h2>
+        <span class="design_dot"></span>
+        Our other Services
+      </h2>
+      <p>
+        You can use other services, click on icon
+      </p>
+    </div>
+    <div class="row">
+
+     
+      
+      <div class="col-md-4 mx-auto">
+        <div class="box">
+          <img src="{% static 'images/s1.png' %}" alt="" />
+          <a href="{% url 'under_page'%}">
+            Cardiovascular disease
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 mx-auto">
+        <div class="box">
+          <img src="{% static 'images/s3.png' %}" alt="" />
+          <a href="{% url 'ckd_page'%}">
+            Chronic Kidney Disease
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 mx-auto">
+        <div class="box">
+          <img src="{% static 'images/s2.png' %}" alt="" />
+          <a href="{% url 'diabetes_page'%}">
+            Diabetes
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="btn-box">
+      <a href="">
+        View All
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- end service section -->
+
   <!-- info section -->
   <section class="info_section layout_padding">
     <div class="container">
