--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -124,7 +124,7 @@
             </div>
             <div class="form-row ">
               <div class="form-group col-lg-4">
-                <label for="inputPatientWaist">Waist</label>
+                <label for="inputPatientWaist">Waist (cm)</label>
                 <input type="number" class="form-control" id="inputPatientWaist" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(150, parseInt(this.value)));">
               </div>
 
@@ -174,6 +174,60 @@
 </section>
 <!-- end discription section -->
 
+  <!-- service section -->
+
+  <section class="service_section layout_padding">
+    <div class="container">
+      <div class="heading_container heading_center">
+        <h2>
+          <span class="design_dot"></span>
+          Our other Services
+        </h2>
+        <p>
+          You can use other services, click on icon
+        </p>
+      </div>
+      <div class="row">
+
+       
+        
+        <div class="col-md-4 mx-auto">
+          <div class="box">
+            <img src="{% static 'images/s1.png' %}" alt="" />
+            <a href="{% url 'under_page'%}">
+              Cardiovascular disease
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mx-auto">
+          <div class="box">
+            <img src="{% static 'images/s4.png' %}" alt="" />
+            <a href="{% url 'stroke_page'%}">
+              Stroke
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 mx-auto">
+          <div class="box">
+            <img src="{% static 'images/s3.png' %}" alt="" />
+            <a href="{% url 'ckd_page'%}">
+              Chronic Kidney Disease
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="btn-box">
+        <a href="">
+          View All
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- end service section -->
   <!-- info section -->
   <section class="info_section layout_padding">
     <div class="container">
