--- a/digweb/digweb/templates/openVeiw/index.html
+++ b/digweb/digweb/templates/openVeiw/index.html
@@ -515,7 +515,7 @@
           <div class="box">
             <img src="{% static 'images/s3.png' %}" alt="" />
             <a href="{% url 'ckd_page'%}">
-              CKD
+              Chronic Kidney Disease
             </a>
           </div>
         </div>
